force-app/main/default/objects/Xero_Connection__c/Xero_Connection__c.object-meta.xml
<CustomObject>
    <description>Stores the primary Xero OAuth client credentials and tokens.</description>
    <label>Xero Connection</label>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>