force-app/main/default/objects/Xero_Connection__c/fields/Default_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Account_Code__c</fullName>
    <description>Default Xero chart account code for outbound invoice/item lines when not otherwise specified.</description>
    <label>Default Account Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>