force-app/main/default/objects/Xero_Connection__c/fields/Default_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Default_Unit_Price__c</fullName>
    <description>Default unit price for outbound Xero item sales details when not otherwise specified.</description>
    <label>Default Unit Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>