force-app/main/default/objects/Xero_Connection__c/fields/Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_ID__c</fullName>
    <description>Xero organisation (tenant) GUID</description>
    <label>Tenant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>