force-app/main/default/objects/Xero_Connection__c/fields/Webhook_Key__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Key__c</fullName>
    <description>Secret key from Xero Developer Portal for webhook HMAC verification (x-xero-signature).</description>
    <label>Webhook Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>